--- a/saber_mas/aprendedelosmejores_vlc.html
+++ b/saber_mas/aprendedelosmejores_vlc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +10,9 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/especialidades.css" />
     <title>Web Skills CV</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
@@ -34,66 +35,50 @@
         SOFTWARE.
     -->
     <nav>
-      <div class="hamburguer-menu">
-        <a class="item-menu" href="../index.html"
-          ><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo"
-        /></a>
-        <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
-        <div class="idiomas">
-          <input
-            class="link-idioma bandera"
-            id="spain"
-            type="image"
-            src="../img/bandera_spain.PNG"
-          />
-          <input
-            class="link-idioma bandera"
-            id="valencia"
-            type="image"
-            src="../img/bandera_valenciana.PNG"
-          />
-        </div>
-        <button class="btn-toggle">
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
+            </div>
+            <button class="btn-toggle">
           <img src="../img/menu.svg" alt="Botón menú" />
         </button>
-      </div>
+        </div>
 
-      <ul class="menu">
-        <li><a class="item-menu" href="./queson.html">¿Qué son?</a></li>
-        <li>
-          <a class="item-menu" href="../index.html#especialidades"
-            >Especialidades</a
+        <ul class="menu">
+            <li><a class="item-menu" href="./queson.html">¿Qué son?</a></li>
+            <li>
+                <a class="item-menu" href="../index.html#especialidades">Especialidades</a
           >
         </li>
-        <li><a class="primary-link" href="#">Apúntate</a></li>
-        <p class="locationEvent-mobile">
-          Feria valencia <br />
-          27 al 31 de Marzo
-        </p>
-      </ul>
+        <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
+            <p class="locationEvent-mobile">
+                Feria valencia <br /> 27 al 31 de Marzo
+            </p>
+        </ul>
     </nav>
 
     <main>
-      <section class="section-primary">
-        <h1 class="title-espec">Aprende de los mejores</h1>
-        <div class="display-flow">
-          <article class="wrapper-image-section-profesional">
-            <div>
-              <img
-                class="img-profesional"
-                src="../img/aprender.svg""
-                alt="Imagen ganadores Comunidad Valenciana (año)"
+        <section class="section-primary">
+            <h1 class="title-espec">Aprende de los mejores</h1>
+            <div class="display-flow">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional" src="../img/aprender.svg" "
+                alt="Imagen ganadores Comunidad Valenciana (año) "
               />
             </div>
           </article>
 
-          <article class="wrapper-image-section-left-profesional">
-            <p class="text-profesional">
+          <article class="wrapper-image-section-left-profesional ">
+            <p class="text-profesional ">
               És una oportunitat en la qual posaràs les teues habilitats al
               límit, no aprens només dels experts, també dels altres
               competidors, on compartireu experiències, alegries, entusiasme.
             </p>
-            <p class="text-profesional">
+            <p class="text-profesional ">
               CVSkills convida als joves a ampliar la seua identitat
               professional. Accentua la seua identificació amb els seus oficis i
               professions. Ser triat per a un equip CVSkills desperta el
@@ -102,7 +87,7 @@
               els seus oficis o professions, és a dir, els seus parells i
               experts.
             </p>
-            <p class="text-profesional">
+            <p class="text-profesional ">
               Els Competidors i Experts emfatitzen que les competències CVSkills
               fan més que ampliar les habilitats tècniques. Milloren les
               habilitats i característiques que permeten fer les coses bé en el
@@ -113,12 +98,12 @@
           </article>
         </div>
       </section>
-      <section class="section-center">
-        <div class="display-3-columnas">
-          <div class="display-3-element">
+      <section class="section-center ">
+        <div class="display-3-columnas ">
+          <div class="display-3-element ">
             <h1>Aprèn de professionals</h1>
             <br />
-            <p class="text-profesional">
+            <p class="text-profesional ">
               Els Experts són un aspecte vital per a CVSkills. Ells estan amb els
               competidors a cada pas. Parlen de la seva satisfacció de donar suport als
               joves en els seus èxits al més alt nivell. Com a mentors i models a
@@ -126,10 +111,10 @@
             </p>
             <br /><br /><br />
           </div>
-          <div class="display-3-element">
+          <div class="display-3-element ">
             <h1>Arriba al més alt!</h1>
             <br />
-            <p class="text-profesional">
+            <p class="text-profesional ">
               Aquesta competició es basa en l'experiència de cadascun de vosaltres i
               a la unitat gràcies al suport de la resta. Una diversitat d'emocions
               després de llargues hores de lluita contra tu mateix que s'uniran la calor de
@@ -137,10 +122,10 @@
             </p>
             <br /><br /><br />
           </div>
-          <div class="display-3-element">
+          <div class="display-3-element ">
             <h1>Competeix amb els millors</h1>
             <br />
-            <p class="text-profesional">
+            <p class="text-profesional ">
               Després de guanyar a la nostra comunitat, et prepararan per arribar a allò
               més lluny possible, sense tenir cap límit. Competiràs amb els millors
               de cada comunitat autònoma.
@@ -151,18 +136,18 @@
     </main>
 
     <footer>
-      <ul class="footer-section">
-        <li><a class="footer-item" href="./terminos.html">Terms</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="./policy.html">Policy</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="#">Contacto</a></li>
+      <ul class="footer-section ">
+        <li><a class="footer-item " href="./terminos.html ">Terms</a></li>
+        <li><a class="footer-item ">|</a></li>
+        <li><a class="footer-item " href="./policy.html ">Policy</a></li>
+        <li><a class="footer-item ">|</a></li>
+        <li><a class="footer-item " href="# ">Contacto</a></li>
       </ul>
 
-      <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+      <a class="no-link " href="https://www.gva.es/va/inicio/presentacion " target="_blank ">© Copyright, Generalitat</a>
     <p><br><br></p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/script.js "></script>
   </body>
 </html>
