--- a/saber_mas/creditos.html
+++ b/saber_mas/creditos.html
@@ -38,8 +38,7 @@
     -->
     <nav>
         <div class="hamburguer-menu">
-            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png"
-                    alt="Web Skills Logo" /></a>
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
             <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
             <div class="idiomas">
                 <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG">
@@ -55,10 +54,9 @@
             <li>
                 <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
             </li>
-            <li><a class="primary-link" href="#">Apúntate</a></li>
+            <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
             <p class="locationEvent-mobile">
-                Feria valencia <br />
-                27 al 31 de Marzo
+                Feria valencia <br /> 27 al 31 de Marzo
             </p>
         </ul>
     </nav>
@@ -73,79 +71,26 @@
                     </p>
                     <p class="text-profesional subtitulo">Freepik</p>
                     <p class="text-profesional">
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308738.htm#page=3&query=friends&position=11&from_view=search&track=sph">Freepik</a>
-                    ,
-                        <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-concepto-educacion_2825851.htm#query=skills&position=39&from_view=search&track=sph">Imagen
-                            de rawpixel.com</a> en Freepik
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-mundial-habilidades-juventud_14213793.htm#page=6&query=skills&position=2&from_view=search&track=sph">Freepik</a>
-                    
-                        <a
-                            href="https://www.freepik.es/vector-gratis/gerentes-taller-capacitan-gerentes-habilidades-e-intercambian-ideas-junta-taller-gerentes-curso-supervisores-concepto-capacitacion-habilidades-gestion_10782699.htm#page=6&query=skills&position=25&from_view=search&track=sph">Imagen
-                            de vectorjuice</a> en Freepik
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308738.htm#page=6&query=friendship&position=49&from_view=search&track=sph">Freepik</a>
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308737.htm#page=4&query=friendship&position=0&from_view=search&track=sph">Freepik</a>
-                    ,
-                        Imagen de <a
-                        href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308768.htm#query=friendship&position=29&from_view=search&track=sph">Freepik</a>
-                    ,
-                        <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-concepto-amistad-etnica_8713402.htm#query=friendship&position=23&from_view=search&track=sph">Imagen
-                            de storyset</a> en Freepik
-                    ,
-                        <a
-                            href="https://www.freepik.es/vector-gratis/grupo-jovenes-posando-foto_5230725.htm#query=friendship&position=21&from_view=search&track=sph">Imagen
-                            de pikisuperstar</a> en Freepik
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/fondo-plano-dia-amistad-grupo-amigos_27416468.htm#query=friendship&position=28&from_view=search&track=sph">Freepik</a>
+                        Imagen de <a href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308738.htm#page=3&query=friends&position=11&from_view=search&track=sph">Freepik</a> ,
+                        <a href="https://www.freepik.es/vector-gratis/ilustracion-concepto-educacion_2825851.htm#query=skills&position=39&from_view=search&track=sph">Imagen
+                            de rawpixel.com</a> en Freepik , Imagen de <a href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-mundial-habilidades-juventud_14213793.htm#page=6&query=skills&position=2&from_view=search&track=sph">Freepik</a>
 
-                    ,
-                        <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-concepto-amistad-etnica_8713402.htm#page=4&query=friendship&position=35&from_view=search&track=sph">Imagen
-                            de storyset</a> en Freepik
+                        <a href="https://www.freepik.es/vector-gratis/gerentes-taller-capacitan-gerentes-habilidades-e-intercambian-ideas-junta-taller-gerentes-curso-supervisores-concepto-capacitacion-habilidades-gestion_10782699.htm#page=6&query=skills&position=25&from_view=search&track=sph">Imagen
+                            de vectorjuice</a> en Freepik , Imagen de <a href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308738.htm#page=6&query=friendship&position=49&from_view=search&track=sph">Freepik</a>                        , Imagen de <a href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308737.htm#page=4&query=friendship&position=0&from_view=search&track=sph">Freepik</a> , Imagen de <a href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308768.htm#query=friendship&position=29&from_view=search&track=sph">Freepik</a>                        ,
+                        <a href="https://www.freepik.es/vector-gratis/ilustracion-concepto-amistad-etnica_8713402.htm#query=friendship&position=23&from_view=search&track=sph">Imagen
+                            de storyset</a> en Freepik ,
+                        <a href="https://www.freepik.es/vector-gratis/grupo-jovenes-posando-foto_5230725.htm#query=friendship&position=21&from_view=search&track=sph">Imagen
+                            de pikisuperstar</a> en Freepik , Imagen de <a href="https://www.freepik.es/vector-gratis/fondo-plano-dia-amistad-grupo-amigos_27416468.htm#query=friendship&position=28&from_view=search&track=sph">Freepik</a>                        ,
+                        <a href="https://www.freepik.es/vector-gratis/ilustracion-concepto-amistad-etnica_8713402.htm#page=4&query=friendship&position=35&from_view=search&track=sph">Imagen
+                            de storyset</a> en Freepik ,
+                        <a href="https://www.freepik.es/vector-gratis/ilustracion-concepto-solidaridad_14562369.htm#query=friendship&position=47&from_view=search&track=sph">Imagen
+                            de storyset</a> en Freepik , Imagen de <a href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308737.htm#page=4&query=friendship&position=0&from_view=search&track=sph">Freepik</a>                        , Imagen de <a href="https://www.freepik.es/vector-gratis/fondo-mapa-puntos-europa_1106680.htm#query=europa&position=6&from_view=search&track=sph">Freepik</a> , Imagen de <a href="https://www.freepik.es/vector-gratis/dibujado-mano-ilustracion-valencia-espana_33115193.htm#query=valencia&position=0&from_view=search&track=sph">Freepik</a>                        ,
+                        <a href="https://www.freepik.es/vector-gratis/diseno-mapa-espana-bandera-vector-fondo-claro_2190403.htm#query=spain&position=11&from_view=search&track=sph">Imagen
+                            de flatart</a> en Freepik ,
 
-                    ,
-                        <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-concepto-solidaridad_14562369.htm#query=friendship&position=47&from_view=search&track=sph">Imagen
-                            de storyset</a> en Freepik
-
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/ilustracion-plana-dia-internacional-amistad_14308737.htm#page=4&query=friendship&position=0&from_view=search&track=sph">Freepik</a>
-
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/fondo-mapa-puntos-europa_1106680.htm#query=europa&position=6&from_view=search&track=sph">Freepik</a>
-
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/dibujado-mano-ilustracion-valencia-espana_33115193.htm#query=valencia&position=0&from_view=search&track=sph">Freepik</a>
-
-                    ,
-                        <a
-                            href="https://www.freepik.es/vector-gratis/diseno-mapa-espana-bandera-vector-fondo-claro_2190403.htm#query=spain&position=11&from_view=search&track=sph">Imagen
-                            de flatart</a> en Freepik
-                    ,
-
-                        <a
-                            href="https://www.freepik.es/vector-gratis/grupo-jovenes-posando-foto_5230725.htm#query=friendship&position=39&from_view=search&track=sph">Imagen
-                            de pikisuperstar</a> en Freepik
-
-                    ,
-                        Imagen de <a
-                            href="https://www.freepik.es/vector-gratis/conjunto-cintas-colores_719072.htm#query=ribbon&position=49&from_view=search&track=sph">Freepik</a>
-
-                    ,
-                        <a
-                            href="https://www.freepik.es/vector-gratis/gerentes-taller-capacitan-gerentes-habilidades-e-intercambian-ideas-junta-taller-gerentes-curso-supervisores-concepto-capacitacion-habilidades-gestion_10782699.htm?query=skills">Imagen
+                        <a href="https://www.freepik.es/vector-gratis/grupo-jovenes-posando-foto_5230725.htm#query=friendship&position=39&from_view=search&track=sph">Imagen
+                            de pikisuperstar</a> en Freepik , Imagen de <a href="https://www.freepik.es/vector-gratis/conjunto-cintas-colores_719072.htm#query=ribbon&position=49&from_view=search&track=sph">Freepik</a> ,
+                        <a href="https://www.freepik.es/vector-gratis/gerentes-taller-capacitan-gerentes-habilidades-e-intercambian-ideas-junta-taller-gerentes-curso-supervisores-concepto-capacitacion-habilidades-gestion_10782699.htm?query=skills">Imagen
                             de vectorjuice</a> en Freepik
                     </p>
                 </article>
