--- a/saber_mas/masquemedallas.html
+++ b/saber_mas/masquemedallas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,9 +11,9 @@
     <link rel="stylesheet" href="../css/especialidades.css" />
 
     <title>Web Skills CV</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
@@ -35,111 +36,82 @@
         SOFTWARE.
     -->
     <nav>
-      <div class="hamburguer-menu">
-        <a class="item-menu" href="../index.html"
-          ><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo"
-        /></a>
-        <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
-        <div class="idiomas">
-          <input
-            class="link-idioma bandera"
-            id="spain"
-            type="image"
-            src="../img/bandera_spain.PNG"
-          />
-          <input
-            class="link-idioma bandera"
-            id="valencia"
-            type="image"
-            src="../img/bandera_valenciana.PNG"
-          />
-        </div>
-        <button class="btn-toggle">
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
+            </div>
+            <button class="btn-toggle">
           <img src="../img/menu.svg" alt="Botón menú" />
         </button>
-      </div>
+        </div>
 
-      <ul class="menu">
-        <li><a class="item-menu" href="./queson.html">¿Qué son?</a></li>
-        <li>
-          <a class="item-menu" href="../index.html#especialidades"
-            >Especialidades</a
+        <ul class="menu">
+            <li><a class="item-menu" href="./queson.html">¿Qué son?</a></li>
+            <li>
+                <a class="item-menu" href="../index.html#especialidades">Especialidades</a
           >
         </li>
-        <li><a class="primary-link" href="#">Apúntate</a></li>
-      </ul>
+        <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
+        </ul>
     </nav>
 
     <main>
-      <section class="section-primary">
-        <h1 class="title-espec">Algo mas que medallas!</h1>
-        <div class="display-flow">
-          <article class="wrapper-image-section-profesional">
-            <div>
-              <img
-                class="img-profesional-medallas"
-                src="../img/equipo.svg"
-                alt="Imagen equipo Comunidad Valenciana"
-              />
+        <section class="section-primary">
+            <h1 class="title-espec">Algo mas que medallas!</h1>
+            <div class="display-flow">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional-medallas" src="../img/equipo.svg" alt="Imagen equipo Comunidad Valenciana" />
+                    </div>
+                </article>
+                <article class="wrapper-image-section-left-profesional">
+                    <p class="text-profesional">
+                        El trabajo en equipo, los ánimos y los aplausos son el día a día de las skills.
+                    </p>
+
+                    <p class="text-profesional">
+                        No solo podrás optar a las medallas y siguientes competiciones, sino que estarás rodeado de amigos en todo momento.
+                    </p>
+                    <p class="text-profesional">
+                        Tanto si son de tu comunidad o no, el reconocimiento está asegurado.
+                    </p>
+
+                    <p class="text-profesional">
+                        No pierdas esta oportunidad increíble de conocer a personas con tus mismas motivaciones y fabricar momentos inolvidables.
+                    </p>
+                    <p class="text-profesional text-cita">
+                        “La gente consigue más como resultado de trabajar con otros que contra ellos.”
+                        <br /> — Dr. Allan Fromme.
+                    </p>
+                </article>
             </div>
-          </article>
-          <article class="wrapper-image-section-left-profesional">
-            <p class="text-profesional">
-              El trabajo en equipo, los ánimos y los aplausos son el día a día
-              de las skills.
-            </p>
-
-            <p class="text-profesional">
-              No solo podrás optar a las medallas y siguientes competiciones,
-              sino que estarás rodeado de amigos en todo momento.
-            </p>
-            <p class="text-profesional">
-              Tanto si son de tu comunidad o no, el reconocimiento está
-              asegurado.
-            </p>
-
-            <p class="text-profesional">
-              No pierdas esta oportunidad increíble de conocer a personas con
-              tus mismas motivaciones y fabricar momentos inolvidables.
-            </p>
-            <p class="text-profesional text-cita">
-              “La gente consigue más como resultado de trabajar con otros que
-              contra ellos.”
-              <br />
-              — Dr. Allan Fromme.
-            </p>
-          </article>
-        </div>
-      </section>
-      <section class="section-secondary">
-        <article class="wrapper-video-section">
-          <div class="wrapper-video-section">
-            <iframe
-              class="video-skills"
-              src="https://www.youtube.com/embed/_vJiT8_ddlY"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </article>
-      </section>
+        </section>
+        <section class="section-secondary">
+            <article class="wrapper-video-section">
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://www.youtube.com/embed/_vJiT8_ddlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
     </main>
 
     <footer>
-      <ul class="footer-section">
-        <li><a class="footer-item" href="./terminos.html">Terms</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="./policy.html">Policy</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="#">Contacto</a></li>
-      </ul>
+        <ul class="footer-section">
+            <li><a class="footer-item" href="./terminos.html">Terms</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="./policy.html">Policy</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacto</a></li>
+        </ul>
 
-      <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br><br></p>
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br><br></p>
     </footer>
 
     <script src="../js/script.js"></script>
-  </body>
+</body>
+
 </html>
