--- a/saber_mas/masquemedallas_vlc.html
+++ b/saber_mas/masquemedallas_vlc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,9 +11,9 @@
     <link rel="stylesheet" href="../css/especialidades.css" />
 
     <title>Web Skills CV</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
@@ -35,115 +36,85 @@
         SOFTWARE.
     -->
     <nav>
-      <div class="hamburguer-menu">
-        <a class="item-menu" href="../index_vlc.html"
-          ><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo"
-        /></a>
-        <p class="locationEvent"><b>Fira valència</b> - 27 al 31 de Març</p>
-        <div class="idiomas">
-          <input
-            class="link-idioma bandera"
-            id="spain"
-            type="image"
-            src="../img/bandera_spain.PNG"
-          />
-          <input
-            class="link-idioma bandera"
-            id="valencia"
-            type="image"
-            src="../img/bandera_valenciana.PNG"
-          />
-        </div>
-        <button class="btn-toggle">
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index_vlc.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Fira valència</b> - 27 al 31 de Març</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG" />
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG" />
+            </div>
+            <button class="btn-toggle">
           <img src="../img/menu.svg" alt="Botón menú" />
         </button>
-      </div>
+        </div>
 
-      <ul class="menu">
-        <li><a class="item-menu" href="./queson_vlc.html">Què són?</a></li>
-        <li>
-          <a class="item-menu" href="../index_vlc.html#especialidades"
-            >Especialitats</a
+        <ul class="menu">
+            <li><a class="item-menu" href="./queson_vlc.html">Què són?</a></li>
+            <li>
+                <a class="item-menu" href="../index_vlc.html#especialidades">Especialitats</a
           >
         </li>
-        <li><a class="primary-link" href="#">Apunta't</a></li>
-        <p class="locationEvent-mobile">
-          Fira valència <br />
-          27 al 31 de Març
-        </p>
-      </ul>
+        <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apunta't</a></li>
+            <p class="locationEvent-mobile">
+                Fira valència <br /> 27 al 31 de Març
+            </p>
+        </ul>
     </nav>
 
     <main>
-      <section class="section-primary">
-        <h1 class="title-espec">Una mica més que medalles!</h1>
-        <div class="display-flow">
-          <article class="wrapper-image-section-profesional">
-            <div>
-              <img
-                class="img-profesional-medallas"
-                src="../img/equipo.svg"
-                alt="Imagen equipo Comunidad Valenciana"
-              />
+        <section class="section-primary">
+            <h1 class="title-espec">Una mica més que medalles!</h1>
+            <div class="display-flow">
+                <article class="wrapper-image-section-profesional">
+                    <div>
+                        <img class="img-profesional-medallas" src="../img/equipo.svg" alt="Imagen equipo Comunidad Valenciana" />
+                    </div>
+                </article>
+                <article class="wrapper-image-section-left-profesional">
+                    <p class="text-profesional">
+                        El treball en equip, els ànims i els aplaudiments són el dia a dia de les skills.
+                    </p>
+
+                    <p class="text-profesional">
+                        No sols podràs optar a les medalles i següents competicions, sinó que estaràs envoltat d'amics en tot moment.
+                    </p>
+                    <p class="text-profesional">
+                        Tant si són de la teua comunitat o no, el reconeixement està assegurat.
+                    </p>
+
+                    <p class="text-profesional">
+                        No perdes aquesta oportunitat increïble de conéixer a persones amb les teues mateixes motivacions i fabricar moments inoblidables.
+                    </p>
+                    <p class="text-profesional text-cita">
+                        “La gent aconsegueix més com a resultat de treballar amb uns altres que contra ells.”
+                        <br /> — Dr. Allan Fromme.
+                    </p>
+                </article>
             </div>
-          </article>
-          <article class="wrapper-image-section-left-profesional">
-            <p class="text-profesional">
-              El treball en equip, els ànims i els aplaudiments són el dia a dia
-              de les skills.
-            </p>
-
-            <p class="text-profesional">
-              No sols podràs optar a les medalles i següents competicions, sinó
-              que estaràs envoltat d'amics en tot moment.
-            </p>
-            <p class="text-profesional">
-              Tant si són de la teua comunitat o no, el reconeixement està
-              assegurat.
-            </p>
-
-            <p class="text-profesional">
-              No perdes aquesta oportunitat increïble de conéixer a persones amb
-              les teues mateixes motivacions i fabricar moments inoblidables.
-            </p>
-            <p class="text-profesional text-cita">
-              “La gent aconsegueix més com a resultat de treballar amb uns
-              altres que contra ells.”
-              <br />
-              — Dr. Allan Fromme.
-            </p>
-          </article>
-        </div>
-      </section>
-      <section class="section-secondary">
-        <article class="wrapper-video-section">
-          <div class="wrapper-video-section">
-            <iframe
-              class="video-skills"
-              src="https://www.youtube.com/embed/_vJiT8_ddlY"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </article>
-      </section>
+        </section>
+        <section class="section-secondary">
+            <article class="wrapper-video-section">
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://www.youtube.com/embed/_vJiT8_ddlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>
     </main>
 
     <footer>
-      <ul class="footer-section">
-        <li><a class="footer-item" href="./terminos_vlc.html">Terms</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="./policy_vlc.html">Policy</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="#">Contacte</a></li>
-      </ul>
+        <ul class="footer-section">
+            <li><a class="footer-item" href="./terminos_vlc.html">Terms</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="./policy_vlc.html">Policy</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacte</a></li>
+        </ul>
 
-      <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br><br></p>
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br><br></p>
     </footer>
 
     <script src="../js/script.js"></script>
-  </body>
+</body>
+
 </html>
