--- a/saber_mas/terminos.html
+++ b/saber_mas/terminos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,10 +12,10 @@
     <link rel="stylesheet" href="../css/avisoyterminos.css">
 
     <title>Web Skills CV</title>
-  </head>
+</head>
 
-  <body>
-        <!--
+<body>
+    <!--
         Copyright (c) 2022 Santiago Benito, Juan Antonio Herráiz, Olga Tello, Esteban Adarme
         
         Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -36,76 +37,75 @@
         SOFTWARE.
     -->
     <nav>
-      <div class="hamburguer-menu">
-        <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png"
-            alt="Web Skills Logo" /></a>
-        <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
-        <div class="idiomas">
-          <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG">
-          <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG">
-        </div>
-        <button class="btn-toggle">
+        <div class="hamburguer-menu">
+            <a class="item-menu" href="../index.html"><img class="logo" src="../img/logoSkills.png" alt="Web Skills Logo" /></a>
+            <p class="locationEvent"><b>Feria valencia</b> - 27 al 31 de Marzo</p>
+            <div class="idiomas">
+                <input class="link-idioma bandera" id="spain" type="image" src="../img/bandera_spain.PNG">
+                <input class="link-idioma bandera" id="valencia" type="image" src="../img/bandera_valenciana.PNG">
+            </div>
+            <button class="btn-toggle">
           <img src="../img/menu.svg" alt="Botón menú" />
         </button>
-      </div>
-  
-      <ul class="menu">
-        <li><a class="item-menu" href="./queson.html">¿Qué son?</a></li>
-        <li>
-          <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
-        </li>
-        <li><a class="primary-link" href="#">Apúntate</a></li>
-        <p class="locationEvent-mobile">
-          Feria valencia <br />
-          27 al 31 de Marzo
-        </p>
-      </ul>
+        </div>
+
+        <ul class="menu">
+            <li><a class="item-menu" href="./queson.html">¿Qué son?</a></li>
+            <li>
+                <a class="item-menu" href="../index.html#especialidades">Especialidades</a>
+            </li>
+            <li><a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a></li>
+            <p class="locationEvent-mobile">
+                Feria valencia <br /> 27 al 31 de Marzo
+            </p>
+        </ul>
     </nav>
 
     <main>
-      <section class="section-primary avisoLegal">
-        <h1 class="title-espec">Términos de uso</h1>
-        <div class="display-flow">
-          <article>
-            <p class="text-profesional">
-              Al acceder y utilizar este servicio, usted acepta y accede a estar obligado por los términos y disposiciones de este acuerdo. Asimismo, al utilizar estos servicios particulares, usted estará sujeto a toda regla o guía de uso correspondiente que se haya publicado para dichos servicios. Toda participación en este servicio constituirá la aceptación de este acuerdo. Si no acepta cumplir con lo anterior, por favor, no lo utilice.
-            </p>
-            <p class="text-profesional subtitulo">Objeto</p>
-            <p class="text-profesional">
-              La finalidad de www.cvskills.com es la de proporcionar información acerca de las competiciones de formación profesional.
-            </p>
-            <p class="text-profesional">
-              A través de esta página web se pretende poner en valor las características de estas competiciones. Además de dar a conocer los diferentes módulos
-              que participan en la misma y se pone a disposición del usuario el contacto con los expertos de cada especialidad.
-            </p>
-            <p class="text-profesional">
-              Se fomenta la participación en las skills y pone a disposición la redirección a la página de registro a las competiciones.
-            </p>
-            <p class="text-profesional">
-              El uso de este sitio web implica al usuario la plena aceptación de las disposiciones incluidas en el aviso legal en la versión publicada por esta página en el momento en que el usuario accede al Sitio Web.
-            </p>
-              <p class="text-profesional">
-                Se recomienda leer periódicamente las presentes Condiciones.
-              </p>
-          </article>
-        </div>
-      </section>
-      
+        <section class="section-primary avisoLegal">
+            <h1 class="title-espec">Términos de uso</h1>
+            <div class="display-flow">
+                <article>
+                    <p class="text-profesional">
+                        Al acceder y utilizar este servicio, usted acepta y accede a estar obligado por los términos y disposiciones de este acuerdo. Asimismo, al utilizar estos servicios particulares, usted estará sujeto a toda regla o guía de uso correspondiente que se haya
+                        publicado para dichos servicios. Toda participación en este servicio constituirá la aceptación de este acuerdo. Si no acepta cumplir con lo anterior, por favor, no lo utilice.
+                    </p>
+                    <p class="text-profesional subtitulo">Objeto</p>
+                    <p class="text-profesional">
+                        La finalidad de www.cvskills.com es la de proporcionar información acerca de las competiciones de formación profesional.
+                    </p>
+                    <p class="text-profesional">
+                        A través de esta página web se pretende poner en valor las características de estas competiciones. Además de dar a conocer los diferentes módulos que participan en la misma y se pone a disposición del usuario el contacto con los expertos de cada especialidad.
+                    </p>
+                    <p class="text-profesional">
+                        Se fomenta la participación en las skills y pone a disposición la redirección a la página de registro a las competiciones.
+                    </p>
+                    <p class="text-profesional">
+                        El uso de este sitio web implica al usuario la plena aceptación de las disposiciones incluidas en el aviso legal en la versión publicada por esta página en el momento en que el usuario accede al Sitio Web.
+                    </p>
+                    <p class="text-profesional">
+                        Se recomienda leer periódicamente las presentes Condiciones.
+                    </p>
+                </article>
+            </div>
+        </section>
+
     </main>
 
     <footer>
-      <ul class="footer-section">
-        <li><a class="footer-item" href="#">Terms</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="./policy.html">Policy</a></li>
-        <li><a class="footer-item">|</a></li>
-        <li><a class="footer-item" href="#">Contacto</a></li>
-      </ul>
+        <ul class="footer-section">
+            <li><a class="footer-item" href="#">Terms</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="./policy.html">Policy</a></li>
+            <li><a class="footer-item">|</a></li>
+            <li><a class="footer-item" href="#">Contacto</a></li>
+        </ul>
 
-      <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
-    <p><br><br></p>
+        <a class="no-link" href="https://www.gva.es/va/inicio/presentacion" target="_blank">© Copyright, Generalitat</a>
+        <p><br><br></p>
     </footer>
 
     <script src="../js/script.js"></script>
-  </body>
+</body>
+
 </html>
